public class TeXText extends TextFormat
{
	TeXText(){
		super();
	}
}